--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>justinmanion.com</title>
+    <script>
+      try {
+        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+        const stored = localStorage.getItem('site_mode');
+        const isDark = stored === 'dark' || (stored === null && prefersDark);
+        if (isDark) document.documentElement.classList.add('dark');
+      } catch (_) {}
+    </script>
+    <style>
+      html {
+        background-color: #111111;
+        color: white;
+      }
+      html:not(.dark) {
+        background-color: #f4f2ee;
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
