--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>justinmanion.com</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/assets/jm-dark-circle.png" />
+
+    <!-- SEO Meta -->
+    <meta name="description" content="Dedicated computer science student with a passion for full-stack software development. Seeking a challenging role with opportunities for technical and professional growth."/>
+
+    <!-- Open Graph (for Discord, Facebook, etc.) -->
+    <meta property="og:title" content="justinmanion.com" />
+    <meta property="og:description" content="Dedicated computer science student with a passion for full-stack software development. Seeking a challenging role with opportunities for technical and professional growth."/>
+    <meta property="og:url" content="https://justinmanion.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://justinmanion.com/preview.png" />
+    <meta property="og:image:alt" content="justinmanion.com Preview Image" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="justinmanion.com" />
+    <meta name="twitter:description" content="Dedicated computer science student with a passion for full-stack software development. Seeking a challenging role with opportunities for technical and professional growth."/>
+    <meta name="twitter:image" content="https://justinmanion.com/preview.png" />
+
     <script>
       (function () {
         try {
